Significantly changed many plot designs

--- a/sensitivity_analysis.ipynb
+++ b/sensitivity_analysis.ipynb
@@ -219,7 +219,11 @@
   {
    "cell_type": "markdown",
    "id": "4dfc2d43-bc1e-40c6-a9de-ea9d7a9faf72",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Plot Comparison of Snowfall Between CONTROL, VARTEMP, and MORESNOW"
    ]
@@ -296,12 +300,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7baa4599-0f5f-4ba9-8aee-e3b96bb0c304",
+   "metadata": {},
+   "source": [
+    "## Sensitivity of Radiation to Thin Snow Layers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbbcb607-bc7e-4880-948e-1523d0a9453a",
+   "id": "9f695262-96db-4aa6-ac93-0a5c7bc757ef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "snow_albedo = 0.5 #Assume for now that there's no water in the snow\n",
+    "thicks = [0.0, 0.0, 0.0, 0.0, 3.79*10**11]\n",
+    "for i in range(4, 0):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
