Updated PaperPlots.ipynb to include comparison of CONTROL and VARTEMP lake temperatures

--- a/PaperPlots.ipynb
+++ b/PaperPlots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "addb3040-81d2-4e98-8bf1-6bcfeeb80dfe",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "caaf6d39-df3e-4b58-b028-57842a252966",
    "metadata": {},
    "outputs": [],
@@ -231,10 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c37adedf-62a3-472c-885d-20286c369561",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Have you made grid files for the CONTROL and NLH simulations? These are just files which contain basic information about coordinates, patch areas, and terrain height. If yes, there should be NetCDF files in the directory with the data for each simulation with the name 'gridconsts.nc'. Enter 'yes' or 'no':  yes\n",
+      "Enter the directory containing the gridconsts.nc file for the CONTROL simulation:  /moonbow/ascheb/les/2010/hires_control\n",
+      "Enter the directory containing the gridconsts.nc file for the NLH simulation:  /moonbow/ascheb/les/2010/hires_nolake\n"
+     ]
+    }
+   ],
    "source": [
     "gridsmade = input(\"Have you made grid files for the CONTROL and NLH simulations? These are just files which contain basic information about coordinates, patch areas, and terrain height. If yes, there should be NetCDF files in the directory with the data for each simulation with the name 'gridconsts.nc'. Enter 'yes' or 'no': \")\n",
     "if gridsmade.lower().strip() == \"yes\":\n",
@@ -1142,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8c062d9f-e4e6-4609-bbf0-def15dee07cf",
    "metadata": {},
    "outputs": [],
@@ -1819,7 +1829,7 @@
    "id": "6f01a0bd-abfd-498f-87de-ca1d21db1971",
    "metadata": {},
    "source": [
-    "## Plot surface sensible heat flux with arrow indicating snow-free land"
+    "## Plot surface sensible heat flux"
    ]
   },
   {
@@ -1909,6 +1919,57 @@
     "controlshflux.close(); del controlshflux\n",
     "nlhshflux.close(); del nlhshflux\n",
     "vartempshflux.close(); del vartempshflux"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2c218c8-503b-42dd-bd80-cf7ebaad3ffd",
+   "metadata": {},
+   "source": [
+    "### SST Comparison Between CONTROL and VARTEMP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "55474443-0e83-4195-9ddd-9c94ee7f0da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sst_control = xr.open_dataset(\"/moonbow/ascheb/les/2010/hires_control/ssth-W-2009-12-27-000000-g1.h5\").isel(phony_dim_1 = slice(1, 999), phony_dim_0 = slice(1, 1099)).rename({\"phony_dim_1\": \"x\", \"phony_dim_0\": \"y\"}).assign_coords({\"x\": controlgrid[\"x\"], \"y\": controlgrid[\"y\"]})\n",
+    "sst_vartemp = xr.open_dataset(\"/moonbow/ascheb/les/2010/hires_vartemp/ssth-W-2009-12-27-000000-g1.h5\").isel(phony_dim_1 = slice(1, 999), phony_dim_0 = slice(1, 1099)).rename({\"phony_dim_1\": \"x\", \"phony_dim_0\": \"y\"}).assign_coords({\"x\": controlgrid[\"x\"], \"y\": controlgrid[\"y\"]})\n",
+    "\n",
+    "eriesst_control = (sst_control[\"SEATF\"].interp(x = lakebox[\"x\"], y = lakebox[\"y\"])*lakebox[\"lakemask\"]).mean(dim = (\"normal\", \"tangent\"))\n",
+    "eriesst_vartemp = (sst_vartemp[\"SEATF\"].interp(x = lakebox[\"x\"], y = lakebox[\"y\"])*lakebox[\"lakemask\"]).mean(dim = (\"normal\", \"tangent\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cffd4cc4-8943-46e3-9f64-69a2923307db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean SST over Lake Erie in CONTROL: 277.46 K. Mean SST over Lake Erie in VARTEMP: 276.30 K\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Mean SST over Lake Erie in CONTROL: {eriesst_control:.2f} K. Mean SST over Lake Erie in VARTEMP: {eriesst_vartemp:.2f} K\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "28951542-d6da-4caa-bf7c-137db7a2a4df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sst_control.close(); del sst_control\n",
+    "sst_vartemp.close(); del sst_vartemp"
    ]
   },
   {
